# SZHK2025

./: README.md
lubancat_ai_manual_code/: .gitignore  .gitlab-ci.yml
lubancat_ai_manual_code/dev_env/: README.md
lubancat_ai_manual_code/dev_env/rkllm/Qwen-1_8B-Chat-Demo/deploy/: CMakeLists.txt  build-linux.sh
lubancat_ai_manual_code/dev_env/rkllm/Qwen-1_8B-Chat-Demo/deploy/src/: llm_demo.cpp
lubancat_ai_manual_code/dev_env/rkllm/Qwen-1_8B-Chat-Demo/export/: export_rkllm.py  generate_data_quant.py
lubancat_ai_manual_code/example/: README.md
lubancat_ai_manual_code/example/clip/cpp/: CMakeLists.txt  build-linux.sh  clip_demo.cc  cn_clip.h  cn_clip_demo.cc  postprocess.cc
lubancat_ai_manual_code/example/clip/cpp/rknpu2/: clip.cc  cn_clip.cc
lubancat_ai_manual_code/example/clip/cpp/rknpu2/rknn_clip_utils/: rknn_clip_utils.cc  rknn_clip_utils.h
lubancat_ai_manual_code/example/clip/cpp/tokenizer/: cn_clip_tokenizer.cpp  cn_clip_tokenizer.h
lubancat_ai_manual_code/example/clip/model/: cn_text.txt
lubancat_ai_manual_code/example/clip/tools/clip/: convert_clip_images.py  convert_clip_text.py  truncated_onnx.py
lubancat_ai_manual_code/example/clip/tools/cn_clip/: convert_cn_clip_images.py  convert_cn_clip_text.py  pytorch_to_onnx.py
lubancat_ai_manual_code/example/melotts/cpp/: CMakeLists.txt  build-linux.sh  lexicon.hpp  main.cc  melotts.cc  melotts.h  parse_args.h  process.cc  process.h
lubancat_ai_manual_code/example/melotts/python/: convert.py
lubancat_ai_manual_code/example/mobileclip/cpp/: CMakeLists.txt  build-linux.sh  main.cc  mobileclip_demo.cc  mobileclip_demo.h
lubancat_ai_manual_code/example/mobileclip/cpp/tokenizer/: clip_tokenizer.h
lubancat_ai_manual_code/example/mobileclip/tools/: convert_image.py  convert_text.py  export_onnx.py  test.py
lubancat_ai_manual_code/example/owl-vit/cpp/: CMakeLists.txt  build-linux.sh  main.cc
lubancat_ai_manual_code/example/owl-vit/cpp/rknpu2/: owlvit.cc  owlvit.h
lubancat_ai_manual_code/example/owl-vit/cpp/tokenizer/: clip_tokenizer.cpp  clip_tokenizer.h
lubancat_ai_manual_code/example/owl-vit/model/: classes.txt
lubancat_ai_manual_code/example/owl-vit/tools/: extract_model.py  onnx2rknn_image.py  onnx2rknn_text.py  test_owlvit.py
lubancat_ai_manual_code/example/picodet/cpp/: CMakeLists.txt  build-linux.sh  main.cc  picodet.h  postprocess.cc  postprocess.h
lubancat_ai_manual_code/example/picodet/cpp/rknpu2/: picodet.cc
lubancat_ai_manual_code/example/picodet/python/: picodet.py
lubancat_ai_manual_code/example/picodet/tools/: export_rknn.py
lubancat_ai_manual_code/example/ppocrv5/cpp/: CMakeLists.txt  main.cc  ppocrv5.h
lubancat_ai_manual_code/example/ppocrv5/cpp/rknpu2/: ppocrv5.cc
lubancat_ai_manual_code/example/rt-detr/python/: export_onnx_dsp.py  onnx2rknn.py
lubancat_ai_manual_code/example/sense-voice/cpp/: CMakeLists.txt  build-linux.sh  main.cc  parser.h  process.cc  process.h  sensevoice.h
lubancat_ai_manual_code/example/sense-voice/cpp/rknpu2/: sensevoice.cc
lubancat_ai_manual_code/example/sense-voice/tools/: convert.py  export_onnx.py
lubancat_ai_manual_code/example/yolo_world/cpp/: CMakeLists.txt  build-linux.sh  main.cc
lubancat_ai_manual_code/example/yolo_world/cpp/rknpu2/clip_text/: clip_text.cc
lubancat_ai_manual_code/example/yolo_world/python/: truncated_onnx.py
lubancat_ai_manual_code/example/yolov10/cpp/src/: yolov10_image_demo.cc
lubancat_ai_manual_code/example/yolov5/cpp/: build-linux.sh
lubancat_ai_manual_code/example/yolov5_seg/cpp/: build-linux.sh
lubancat_ai_manual_code/example/yolov5face/cpp/: CMakeLists.txt  main.cc  main1.cc  main2.cc
lubancat_ai_manual_code/example/yolov5face/cpp/install/rk3576_linux/: rknn_yolov5face_demo
